Clean up tagging and templates

--- a/stacks/audiogram.yml
+++ b/stacks/audiogram.yml
@@ -1,8 +1,10 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Audiogram application running in Docker
 Mappings:
-  ContainerNameMap:
-    AudiogramApp:
+  Shared:
+    Project:
+      name: audiogram
+    Container:
       name: server-worker-combined
 Parameters:
   VPC:
@@ -55,6 +57,13 @@ Resources:
       Name: !Sub audiogram-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
       Protocol: HTTP
+      Tags:
+        - Key: Project
+          Value: !FindInMap [Shared, Project, name]
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: Name
+          Value: !Sub Audiogram-${EnvironmentType}
       VpcId: !Ref VPC
   AudiogramALBHTTPHostListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
@@ -96,7 +105,7 @@ Resources:
               awslogs-group: !Ref AudiogramLogGroup
               awslogs-region: !Ref AWS::Region
           Memory: 384
-          Name: !FindInMap [ContainerNameMap, AudiogramApp, name]
+          Name: !FindInMap [Shared, Container, name]
           PortMappings:
             - HostPort: 0
               ContainerPort: 8888
@@ -109,7 +118,7 @@ Resources:
         MinimumHealthyPercent: 50
       DesiredCount: 1
       LoadBalancers:
-        - ContainerName: !FindInMap [ContainerNameMap, AudiogramApp, name]
+        - ContainerName: !FindInMap [Shared, Container, name]
           ContainerPort: 8888
           TargetGroupArn: !Ref AudiogramALBTargetGroup
       Role: !Ref ECSServiceIAMRole
