--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -197,8 +197,12 @@ Resources:
           FromPort: 80
           ToPort: 80
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName} ECS instances web
+          Value: !Sub Platform-${EnvironmentType}-ECS-instances-web
   ECSInstanceSSHSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
@@ -210,8 +214,12 @@ Resources:
           FromPort: 22
           ToPort: 22
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName} ECS instances SSH
+          Value: !Sub Platform-${EnvironmentType}-ECS-instances-SSH
   ECSInstanceReturnTrafficSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
@@ -223,8 +231,12 @@ Resources:
           FromPort: 1024
           ToPort: 65535
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName} ECS instances return traffic
+          Value: !Sub Platform-${EnvironmentType}-ECS-instances-inbound
   ECSInstanceOutboundSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
@@ -234,8 +246,12 @@ Resources:
         - CidrIp: 0.0.0.0/0
           IpProtocol: -1
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName} ECS instances outbound
+          Value: !Sub Platform-${EnvironmentType}-ECS-instances-outbound
   ECSClusterASGLaunchConfiguration:
     # TODO Finish config
     # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/quickref-ecs.html
