--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -73,6 +73,8 @@ Resources:
       NotificationARNs:
         - Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
       TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/root-vpc.yml"
       TimeoutInMinutes: "5"
   CertificateStack:
@@ -82,6 +84,7 @@ Resources:
         - Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
       Parameters:
+        EnvironmentType: !Ref EnvironmentType
         VPC: !GetAtt VPCStack.Outputs.VPC
       TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/certificate.yml"
       TimeoutInMinutes: "5"
@@ -117,6 +120,7 @@ Resources:
         - Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
       Parameters:
+        EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
@@ -148,6 +152,7 @@ Resources:
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+        EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
         ECRRegion: !Ref ECRRegion
         SecretsBase: !Ref SecretsBase
