--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -5,6 +5,8 @@ Description: >
 Parameters:
   VPC:
      Type: "AWS::EC2::VPC::Id"
+  EnvironmentType:
+    Type: String
 Resources:
   VpcCertificate:
     Type: "AWS::CertificateManager::Certificate"
@@ -13,6 +15,13 @@ Resources:
       DomainValidationOptions:
         - ValidationDomain: prx.tech
           DomainName: !Sub "*.${VPC}.prx.tech"
+      Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: Name
+          Value: !Sub "${EnvironmentType} ${VPC} wildcard"
 Outputs:
   CertificateArn:
     Description: The ARN for the wildcard certificate
