--- a/stacks/root-vpc.yml
+++ b/stacks/root-vpc.yml
@@ -25,6 +25,9 @@ Conditions:
   IsApSoutheast2: !Equals [!Ref "AWS::Region", ap-southeast-2]
   IsApSouth1: !Equals [!Ref "AWS::Region", ap-south-1]
   IsSaEast1: !Equals [!Ref "AWS::Region", sa-east-1]
+Parameters:
+  EnvironmentType:
+    Type: String
 Resources:
   VPC:
     Type: AWS::EC2::VPC
@@ -34,14 +37,22 @@ Resources:
       EnableDnsHostnames: false
       InstanceTenancy: default
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Ref AWS::StackName
+          Value: !Sub Platform-${EnvironmentType}
   InternetGateway:
     Type: "AWS::EC2::InternetGateway"
     Properties:
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Ref AWS::StackName
+          Value: !Sub Platform-${EnvironmentType}
   GatewayAttachment:
     Type: "AWS::EC2::VPCGatewayAttachment"
     Properties:
@@ -52,8 +63,12 @@ Resources:
     Properties:
       VpcId: !Ref VPC
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Ref AWS::StackName
+          Value: !Sub Platform-${EnvironmentType}
   Route:
     Type: "AWS::EC2::Route"
     DependsOn: GatewayAttachment
@@ -68,8 +83,12 @@ Resources:
       AvailabilityZone: !If [IsUsWest1, us-west-1c, !Join ["", [!Ref "AWS::Region", a]]]
       CidrBlock: 10.0.1.0/24
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}:1
+          Value: !Sub Platform-${EnvironmentType}-1
   Subnet2:
     Type: "AWS::EC2::Subnet"
     Properties:
@@ -77,8 +96,12 @@ Resources:
       AvailabilityZone: !If [IsUsEast1, us-east-1c, !Join ["", [!Ref "AWS::Region", b]]]
       CidrBlock: 10.0.2.0/24
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}:2
+          Value: !Sub Platform-${EnvironmentType}-2
   Subnet1RouteTableAssociation:
     Type: "AWS::EC2::SubnetRouteTableAssociation"
     Properties:
@@ -94,8 +117,12 @@ Resources:
     Properties:
       VpcId: !Ref VPC
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Ref AWS::StackName
+          Value: !Sub Platform-${EnvironmentType}
   InboundHTTPSNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
@@ -170,8 +197,12 @@ Resources:
       DomainNameServers:
         - AmazonProvidedDNS
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Ref AWS::StackName
+          Value: !Sub Platform-${EnvironmentType}
   DHCPOptionsAssociation:
     Type: "AWS::EC2::VPCDHCPOptionsAssociation"
     Properties:
