--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -1,3 +1,20 @@
+# Use root-vpc.yml for now!!
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
 # NOTE Some default resource created along with a VPC (security group, network
 # ACL, etc) can't be tagged, so they don't match the resources that are
 # explicitly created. They work correctly, though, and will be torn down if the
