--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -313,7 +313,7 @@ Resources:
         - !Ref VPCSubnet1AZ
         - !Ref VPCSubnet2AZ
       Cooldown: "240"
-      DesiredCapacity: !FindInMap [EnvironmentType, !Ref EnvironmentType, DefaultDesiredCapacity]
+      DesiredCapacity: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DefaultDesiredCapacity]
       HealthCheckGracePeriod: 512
       HealthCheckType: EC2
       LaunchConfigurationName: !Ref ECSClusterASGLaunchConfiguration
