Add missing template parameters

--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -33,6 +33,8 @@ Parameters:
   # Misc #######################################################################
   OpsDebugMessagesSnsTopicArn:
     Type: String
+  EnvironmentType:
+    Type: String
   EnvironmentTypeAbbreviation:
     Type: String
   ECRRegion:
