Clean up mappings

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -47,7 +47,7 @@ Parameters:
   Foo:
     Type: String
 Mappings:
-  EnvironmentTypeAbbreviationMap:
+  EnvironmentTypeMap:
     Testing:
       abbreviation: test
     Beta:
@@ -121,7 +121,7 @@ Resources:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
       Parameters:
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
@@ -153,7 +153,7 @@ Resources:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         ECRRegion: !Ref ECRRegion
         SecretsBase: !Ref SecretsBase
         CastleECRImageTag: !Ref CastleECRImageTag
@@ -182,7 +182,7 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         ECRRegion: !Ref ECRRegion
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue:
@@ -281,7 +281,7 @@ Outputs:
 #   #       ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
 #   #       ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
 #   #       ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
-#   #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
+#   #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
 #   #       OpsDebugMessagesSnsTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSnsTopicArn
 #   #       ECRRegion: !Ref ECRRegion
 #   #       CmsECRImageTag: !Ref CmsECRImageTag
@@ -332,7 +332,7 @@ Outputs:
 #         PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
 #         PlatformALBHTTPListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Publish, http]
 #         PlatformALBHTTPSListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Publish, https]
-#         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
+#         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
 #         ECRRegion: !Ref ECRRegion
 #         EnvCmsHost: !Ref EnvCmsHost
 #         EnvIdHost: !Ref EnvIdHost
@@ -379,7 +379,7 @@ Outputs:
 #         OpsWarnMessagesSnsTopicArn: !GetAtt NotificationsStack.Outputs.OpsWarnMessagesSnsTopicArn
 #         BootstrapStackName: !Ref BootstrapStackName
 #         PRXUploadAccessKey: !Ref PRXUploadAccessKey
-#         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
+#         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
 #         CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-CodeBucket"]]
 #         LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
 #       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
