--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -34,6 +34,8 @@ Parameters:
     Type: String
   TemplateConfigStagingKey:
     Type: String
+  CapturedStatesBucket:
+    Type: String
 Resources:
   # S3 Buckets
   ArtifactStore:
@@ -105,6 +107,7 @@ Resources:
                 Action:
                   - "s3:putObject"
                 Resource:
+                  - !Sub arn:aws:s3:::${CapturedStatesBucket}/*
                   - !Sub arn:aws:s3:::${InfrastructureCodeBucket}/*
               - Effect: Allow
                 Action:
@@ -230,6 +233,7 @@ Resources:
                   - "lambda:InvokeFunction"
                 Resource:
                   - !GetAtt InfrastructureRepoSourceS3SyncFuncton.Arn
+                  - !GetAtt EnvironmentStateCaptureFunction.Arn
         # Lets CodePipeline start CodeBuild (for acceptance tests, etc)
         - PolicyName: CodeBuildPolicy
           PolicyDocument:
@@ -373,11 +377,30 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref InfrastructureCodeBucket
-        S3Key: ci/sns-ops-to-slack.zip # TODO
+        S3Key: cd/infrastructure-s3-sync.zip
       Description: Copies Infrastructure repo artifact to S3
       Environment:
         Variables:
           INFRASTRUCTURE_CODE_BUCKET: !Ref InfrastructureCodeBucket
+      Handler: index.handler
+      MemorySize: 128
+      Role: !GetAtt LambdaExecutionIAMRole.Arn
+      Runtime: nodejs6.10
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+      Timeout: 3
+  EnvironmentStateCaptureFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket: !Ref InfrastructureCodeBucket
+        S3Key: cd/environment-state-capture.zip
+      Description: >
+        Capture template and config version data for deployed environments
+      Environment:
+        Variables:
+          CAPTURED_STATES_BUCKET: !Ref CapturedStatesBucket
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
@@ -394,13 +417,13 @@ Resources:
       AlarmName: Infrastructure S3 Sync Lambda Errors
       AlarmActions:
         - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       InsufficientDataActions:
         - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       OKActions:
         - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       AlarmDescription: >
         The error rate on the S3 Sync lambda has exceeded 0 in
         the last minute.
@@ -414,6 +437,33 @@ Resources:
       Dimensions:
         - Name: FunctionName
           Value: !Ref InfrastructureRepoSourceS3SyncFuncton
+  StateCaptureErrorAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Properties:
+      ActionsEnabled: true
+      AlarmName: CD State Capture Lambda Errors
+      AlarmActions:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+      InsufficientDataActions:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+      OKActions:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+      AlarmDescription: >
+        The error rate on the state capture lambda has exceeded 0 in
+        the last minute.
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: "1"
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: "60"
+      Statistic: Sum
+      Threshold: "0"
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref EnvironmentStateCaptureFunction
   # Pipelines
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
@@ -479,7 +529,7 @@ Resources:
                 - Name: InfrastructureRepoSourceArtifact
               OutputArtifacts:
                 - Name: RepoStateArtifact
-              RunOrder: 2
+              RunOrder: 1
         - Name: Staging
           Actions:
             - Name: StagingDeploy
@@ -509,6 +559,18 @@ Resources:
                 - Name: InfrastructureRepoSourceArtifact
                 - Name: RepoStateArtifact
               RunOrder: 1
+            - Name: CaptureStagingState
+              ActionTypeId:
+                Category: Invoke
+                Owner: AWS
+                Provider: Lambda
+                Version: 1
+              Configuration:
+                FunctionName: !Ref EnvironmentStateCaptureFunction
+              InputArtifacts:
+                - Name: InfrastructureRepoSourceArtifact
+                - Name: TemplateConfigStagingZipArtifact
+              RunOrder: 2
         - Name: Testing
           Actions:
             - Name: Acceptance
