Add S3 version permission to ECS instance role

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -172,6 +172,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - "s3:GetObject"
+                  - "s3:GetObjectVersion"
                 Resource:
                   - !Sub arn:aws:s3:::${SecretsBase}-secrets/*
       ManagedPolicyArns:
