add secrets region

--- a/stacks/audiogram.yml
+++ b/stacks/audiogram.yml
@@ -34,11 +34,13 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
-  ECRRegion:
-    Type: String
   OpsDebugMessagesSnsTopicArn:
     Type: String
+  ECRRegion:
+    Type: String
   SecretsBase:
+    Type: String
+  SecretsRegion:
     Type: String
   ##############################################################################
   AudiogramECRImageTag:
