--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -111,6 +111,7 @@ Resources:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         SecretsBase: !Ref SecretsBase
         SecretsKey: !Ref SecretsKey
+        SecretsRegion: !Ref ECRRegion
       TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/ecs.yml"
       TimeoutInMinutes: "5"
   LoadBalancersStack:
@@ -156,6 +157,7 @@ Resources:
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
         ECRRegion: !Ref ECRRegion
         SecretsBase: !Ref SecretsBase
+        SecretsRegion: !Ref ECRRegion
         CastleECRImageTag: !Ref CastleECRImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
       TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/castle.prx.org.yml"
@@ -183,11 +185,12 @@ Resources:
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
-        ECRRegion: !Ref ECRRegion
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+        ECRRegion: !Ref ECRRegion
         SecretsBase: !Ref SecretsBase
+        SecretsRegion: !Ref ECRRegion
         AudiogramECRImageTag: !Ref AudiogramECRImageTag
         AudiogramSecretsVersion: !Ref AudiogramSecretsVersion
       TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/audiogram.yml"
