--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -166,7 +166,7 @@ Resources:
                 Action:
                   - "kms:Decrypt"
                 Resource:
-                  - Sub! arn:aws:kms:${SecretsRegion}:${AWS::AccountId}:key/${SecretsKey}
+                  - !Sub arn:aws:kms:${SecretsRegion}:${AWS::AccountId}:key/${SecretsKey}
         - PolicyName: !Sub key-${SecretsBase}-secrets-instance-access-policy
           PolicyDocument:
             Version: "2012-10-17"
