--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -36,6 +36,11 @@ Parameters:
     Type: String
   CastleSecretsVersion:
     Type: String
+  # Coming Soon
+  # UploadGitCommit:
+  #   Type: String
+  # PRXUploadAccessKey:
+  #   Type: String
   # Parameter Overrides
   NotificationsStackName:
     Type: String
@@ -129,9 +134,9 @@ Resources:
         VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
       TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/load-balancers.yml"
       TimeoutInMinutes: "5"
-  ################################################################################
-  #### CASTLE ####################################################################
-  ################################################################################
+  ##############################################################################
+  #### CASTLE ##################################################################
+  ##############################################################################
   CastleStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -162,9 +167,9 @@ Resources:
         CastleSecretsVersion: !Ref CastleSecretsVersion
       TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/castle.prx.org.yml"
       TimeoutInMinutes: "5"
-  ################################################################################
-  #### AUDIOGRAMS ################################################################
-  ################################################################################
+  ##############################################################################
+  #### AUDIOGRAMS ##############################################################
+  ##############################################################################
   AudiogramStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -195,6 +200,28 @@ Resources:
         AudiogramSecretsVersion: !Ref AudiogramSecretsVersion
       TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/audiogram.yml"
       TimeoutInMinutes: "5"
+  ##############################################################################
+  # upload.prx.org #############################################################
+  ##############################################################################
+  # TODO TemplateURL needs to look in InfrastructureCodeBucket for some object
+  #  labeled with the lambda code version (probably git commit sha)
+  # UploadLambdaStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - Fn::ImportValue:
+  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #     Parameters:
+  #       OpsWarnMessagesSnsTopicArn:
+  #         - Fn::ImportValue:
+  #             !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+  #       PRXUploadAccessKey: !Ref PRXUploadAccessKey
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
+  #       CodeBucket: !Ref InfrastructureCodeBucket
+  #       LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
+  #     TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/upload.prx.org/${UploadGitCommit}.zip"
+  #     TimeoutInMinutes: "5"
 Outputs:
   VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
@@ -373,17 +400,4 @@ Outputs:
 #   #       LambdaFunctionCodeS3Key: !Ref CmsImageLambdaZipName
 #   #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/cms-image-lambda/cms-image-lambda.yml"]]
 #   #     TimeoutInMinutes: "5"
-#   UploadLambdaStack:
-#     Type: "AWS::CloudFormation::Stack"
-#     Properties:
-#       NotificationARNs:
-#         - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSnsTopicArn
-#       Parameters:
-#         OpsWarnMessagesSnsTopicArn: !GetAtt NotificationsStack.Outputs.OpsWarnMessagesSnsTopicArn
-#         BootstrapStackName: !Ref BootstrapStackName
-#         PRXUploadAccessKey: !Ref PRXUploadAccessKey
-#         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
-#         CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-CodeBucket"]]
-#         LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
-#       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
-#       TimeoutInMinutes: "5"
+#
