--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -15,9 +15,9 @@ Parameters:
     Type: String
   CodeBuildSlackWebhookURL:
     Type: String
-  # IkeSlackSlackWebhookURL:
-  #   Type: String
-  # IkeSlackVerificationToken:
+  IkeDeploysSlackSlackWebhookURL:
+    Type: String
+  IkeSlackVerificationToken:
     Type: String
 Resources:
   # SNS Topics
@@ -47,6 +47,31 @@ Resources:
       Path: "/"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+  IkeCallbackHandlerLambdaIAMRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Principal:
+              Service:
+                - "lambda.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
+      Path: "/"
+      Policies:
+        - PolicyName: CodePipelineApprovalPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "codepipeline:PutApprovalResult"
+                Resource:
+                  - "*" # This should be okay
+      ManagedPolicyArns:
+        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
   # Lambda Functions
   SnsOpsMessagesToSlackLambdaFunction:
     Type: "AWS::Lambda::Function"
@@ -64,10 +89,29 @@ Resources:
           PIPELINE_SLACK_WEBHOOK_URL: !Ref CodePipelineSlackWebhookURL
           CFN_SLACK_WEBHOOK_URL: !Ref CloudFormationSlackWebhookURL
           CODEBUILD_SLACK_WEBHOOK_URL: !Ref CodeBuildSlackWebhookURL
-          # IKE_SLACK_WEBHOOK_URL: !Ref IkeSlackSlackWebhookURL
+          IKE_DEPLOYS_SLACK_WEBHOOK_URL: !Ref IkeDeploysSlackSlackWebhookURL
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
+      Runtime: nodejs6.10
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+      Timeout: 3
+  IkeCallbackHandlerLambdaFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket: !Ref LambdaCodeBucket
+        S3Key: "notifications/sns-ops-to-slack.zip"
+      Description: >
+        Handles requests from Slack for interactive messages
+      Environment:
+        Variables:
+          SLACK_VERIFICATION_TOKEN: !Ref IkeSlackVerificationToken
+      Handler: index.handler
+      MemorySize: 128
+      Role: !GetAtt IkeCallbackHandlerLambdaIAMRole.Arn
       Runtime: nodejs6.10
       Tags:
         - Key: Project
@@ -109,6 +153,14 @@ Resources:
       FunctionName: !Ref SnsOpsMessagesToSlackLambdaFunction
       Principal: sns.amazonaws.com
       SourceArn: !Ref OpsFatalMessagesSnsTopic
+  # Lambda Permissions for API Gateway
+  IkeCallbacHandlerRestApiLambdaPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref IkeCallbackHandlerLambdaFunction
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestApi}/${RestApiStage}/*"  # TOD This isn't quite right. Reference one made by the console to correct
   # Lambda Alarms
   SlackRelayErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
@@ -165,6 +217,56 @@ Resources:
       Endpoint: !GetAtt SnsOpsMessagesToSlackLambdaFunction.Arn
       Protocol: lambda
       TopicArn: !Ref OpsFatalMessagesSnsTopic
+  # API Gateway
+  RestApi:
+    Type: "AWS::ApiGateway::RestApi"
+    Properties:
+      Name: !Sub infrastructure-${AWS::StackName}
+      Description: >
+        Provides an API for inbound requests used by the notifications stack,
+        such as Slack interactive messages
+  IkeRestApiResource:
+    Type: "AWS::ApiGateway::Resource"
+    Properties:
+      RestApiId: !Ref RestApi
+      ParentId: !GetAtt RestApi.RootResourceId
+      PathPart: "ike"
+  IkeCodePipelineRestApiResource:
+    Type: "AWS::ApiGateway::Resource"
+    Properties:
+      RestApiId: !Ref RestApi
+      ParentId: !Ref IkeRestApiResource
+      PathPart: "codepipeline"
+  IkeCodePipelineApprovalRestApiResource:
+    Type: "AWS::ApiGateway::Resource"
+    Properties:
+      RestApiId: !Ref RestApi
+      ParentId: !Ref IkeCodePipelineRestApiResource
+      PathPart: "approval"
+  IkeCodePipelineApprovalRestApiProxyMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref RestApi
+      ResourceId: !Ref IkeCodePipelineApprovalRestApiResource
+      HttpMethod: POST
+      AuthorizationType: NONE
+      Integration:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${IkeCallbackHandlerLambdaFunction.Arn}/invocations
+  RestApiDeployment:
+    DependsOn: IkeCodePipelineApprovalRestApiProxyMethod
+    Type: "AWS::ApiGateway::Deployment"
+    Properties:
+      RestApiId: !Ref RestApi
+      Description: "Notifications stack deployment"
+  RestApiStage:
+    Type: "AWS::ApiGateway::Stage"
+    Properties:
+      StageName: prod
+      Description: "Production stage for notifications stack"
+      RestApiId: !Ref RestApi
+      DeploymentId: !Ref RestApiDeployment
 Outputs:
   SnsOpsMessagesToSlackLambdaFunctionName:
     Value: !Ref SnsOpsMessagesToSlackLambdaFunction
@@ -194,3 +296,5 @@ Outputs:
     Value: !Ref OpsFatalMessagesSnsTopic
     Export:
       Name: !Sub ${AWS::StackName}-OpsFatalMessagesSnsTopicArn
+  IkeCodePipelineApprovalHandlerCallbackURL:
+    Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${RestApiStage}/ike/codepipeline/approval"
