--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -7,16 +7,56 @@ Mappings:
   Shared:
     SourceArchives:
       Key: github-source-archive.zip
+Metadata:
+  AWS::CloudFormation::Interface:
+    ParameterGroups:
+      - Label:
+          default: Stack Dependencies
+        Parameters:
+          - InfrastructureStorageStackName
+          - NotificationsStackName
+      - Label:
+          default: GitHub API
+        Parameters:
+          - GitHubToken
+          - GitHubWebhookSecret
+      - Label:
+          default: CodeBuild
+        Parameters:
+          - CodeBuildBootstrapUrl
+    ParameterLabels:
+      InfrastructureStorageStackName:
+        default: Storage stack name
+      NotificationsStackName:
+        default: Notifications stack name
+      GitHubToken:
+        default: Access token
+      GitHubWebhookSecret:
+        default: Webhook secret
+      CodeBuildBootstrapUrl:
+        default: Bootstrap script URL
 Parameters:
+  InfrastructureStorageStackName:
+    Default: infrastructure-storage
+    Description: The name of a previously launched infrastructure storage stack
+    Type: String
   NotificationsStackName:
+    Default: notifications
+    Description: The name of a previously launched notifications stack
     Type: String
   GitHubToken:
-     Type: String
-  GitHubWebhookSecret:
+    Description: >
+      A GitHub access token with permissions to update statuses, request
+      content, etc
     Type: String
-  InfrastructureCodeBucket:
+  GitHubWebhookSecret:
+    Description: >
+      The secret provided by GitHub for the push and pull request events webhook
     Type: String
   CodeBuildBootstrapUrl:
+    Description: >
+      URL of the bootstrap shell script that the CI runner CodeBuild project
+      will install and execute
     Type: String
 Resources:
   # ACM Certificates
@@ -28,7 +68,7 @@ Resources:
         - ValidationDomain: prx.tech
           DomainName: !Sub "*.${AWS::Region}.${AWS::StackName}.prx.tech"
   # S3 Buckets
-  SourceArchiveBucket:
+  CiCodeBuildSourceArchiveBucket:
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
     Properties:
@@ -62,7 +102,7 @@ Resources:
     Properties:
       Endpoint:
         Fn::ImportValue:
-          !Sub "${NotificationsStackName}-SnsOpsMessagesToSlackLambdaFunctionArn"
+          !Sub ${NotificationsStackName}-SnsOpsMessagesToSlackLambdaFunctionArn
       Protocol: lambda
       TopicArn: !Ref CiStatusSnsTopic
   # Lambda Permssions for SNS
@@ -86,7 +126,7 @@ Resources:
       Action: lambda:InvokeFunction
       FunctionName:
         Fn::ImportValue:
-          !Sub "${NotificationsStackName}-SnsOpsMessagesToSlackLambdaFunctionName"
+          !Sub ${NotificationsStackName}-SnsOpsMessagesToSlackLambdaFunctionName
       Principal: sns.amazonaws.com
       SourceArn: !Ref CiStatusSnsTopic
   # IAM Roles
@@ -132,7 +172,7 @@ Resources:
                 Action:
                   - "s3:putObject"
                 Resource:
-                  - !Sub arn:aws:s3:::${SourceArchiveBucket}/*
+                  - !Sub arn:aws:s3:::${CiCodeBuildSourceArchiveBucket}/*
         - PolicyName: CodeBuildPolicy
           PolicyDocument:
             Version: "2012-10-17"
@@ -173,7 +213,7 @@ Resources:
                   # a circular dep.
                   - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-Runner
                   - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-Runner:*
-        - PolicyName: SourceArchiveBucketBasicAccess
+        - PolicyName: CiCodeBuildSourceArchiveBucketBasicAccess
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -182,7 +222,7 @@ Resources:
                   - "s3:GetObject"
                   - "s3:GetObjectVersion"
                 Resource:
-                  - !Sub arn:aws:s3:::${SourceArchiveBucket}/*
+                  - !Sub arn:aws:s3:::${CiCodeBuildSourceArchiveBucket}/*
         - PolicyName: SnsPolicy
           PolicyDocument:
             Version: "2012-10-17"
@@ -217,7 +257,9 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
-        S3Bucket: !Ref InfrastructureCodeBucket
+        S3Bucket:
+          Fn::ImportValue:
+            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: ci/github-webhook-endpoint.zip
       Description: Backs the GitHub webhook payload requests endpoint
       Environment:
@@ -236,7 +278,9 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
-        S3Bucket: !Ref InfrastructureCodeBucket
+        S3Bucket:
+          Fn::ImportValue:
+            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: ci/github-event-handler.zip
       Description: Handles GitHub events forwarded from the endpoint
       Environment:
@@ -244,8 +288,8 @@ Resources:
             GITHUB_ACCESS_TOKEN: !Ref GitHubToken
             CI_STATUS_TOPIC_ARN: !Ref CiStatusSnsTopic
             CODEBUILD_PROJECT_NAME: !Ref CodeBuildProject
-            SOURCE_ARCHIVE_BUCKET: !Ref SourceArchiveBucket
-            SOURCE_ARCHIVE_KEY: !FindInMap [Shared, SourceArchives, Key]
+            CODEBUILD_SOURCE_ARCHIVE_BUCKET: !Ref CiCodeBuildSourceArchiveBucket
+            CODEBUIL_SOURCE_ARCHIVE_KEY: !FindInMap [Shared, SourceArchives, Key]
             CODEBUILD_CALLBACK_TOPIC_ARN: !Ref CodeBuildCallbackSnsTopic
             AWS_ACCOUNT_ID: !Ref AWS::AccountId
       Handler: index.handler
@@ -260,7 +304,9 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
-        S3Bucket: !Ref InfrastructureCodeBucket
+        S3Bucket:
+          Fn::ImportValue:
+            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: ci/codebuild-callback-handler.zip
       Description: Handles GitHub events forwarded from the endpoint
       Environment:
@@ -283,13 +329,13 @@ Resources:
       AlarmName: GitHub Webhook Endpoint Lambda Errors
       AlarmActions:
         - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
       InsufficientDataActions:
         - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
       OKActions:
         - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
       AlarmDescription: >
         The error rate on the GitHub webhook endpoint lambda has exceeded 0 in
         the last five minutes.
@@ -310,13 +356,13 @@ Resources:
       AlarmName: GitHub Event Handler Lambda Errors
       AlarmActions:
         - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
       InsufficientDataActions:
         - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
       OKActions:
         - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+            !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
       AlarmDescription: >
         The error rate on the GitHub event handler lambda has exceeded 0 in
         the last five minutes.
@@ -414,7 +460,7 @@ Resources:
       ServiceRole: !GetAtt CodeBuildIAMRole.Arn
       Source:
         BuildSpec: !Sub "version: 0.1\n\nphases:\n  build:\n    commands:\n      - curl -sO ${CodeBuildBootstrapUrl} && sh bootstrap.sh"
-        Location: !Join ["", ["arn:aws:s3:::", !Ref SourceArchiveBucket, "/", !FindInMap [Shared, SourceArchives, Key]]]
+        Location: !Join ["", ["arn:aws:s3:::", !Ref CiCodeBuildSourceArchiveBucket, "/", !FindInMap [Shared, SourceArchives, Key]]]
         Type: S3
       Tags:
         - Key: Project
