--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -42,9 +42,9 @@ Parameters:
   # PRXUploadAccessKey:
   #   Type: String
   # Parameter Overrides
-  NotificationsStackName:
+  InfrastructureStorageStackName:
     Type: String
-  InfrastructureCodeBucket:
+  NotificationsStackName:
     Type: String
   InfrastructureGitCommit:
     Type: String
@@ -80,7 +80,7 @@ Resources:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
       Parameters:
         EnvironmentType: !Ref EnvironmentType
-      TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/root-vpc.yml"
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Ref: InfrastructureGitCommit, "/stacks/vpc.yml"]]
       TimeoutInMinutes: "5"
   CertificateStack:
     Type: "AWS::CloudFormation::Stack"
@@ -91,7 +91,7 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         VPC: !GetAtt VPCStack.Outputs.VPC
-      TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/certificate.yml"
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Ref: InfrastructureGitCommit, "/stacks/certificate.yml"]]
       TimeoutInMinutes: "5"
   ECSClusterStack:
     Type: "AWS::CloudFormation::Stack"
@@ -117,7 +117,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         SecretsKey: !Ref SecretsKey
         SecretsRegion: !Ref ECRRegion
-      TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/ecs.yml"
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Ref: InfrastructureGitCommit, "/stacks/ecs.yml"]]
       TimeoutInMinutes: "5"
   LoadBalancersStack:
     Type: "AWS::CloudFormation::Stack"
@@ -132,7 +132,7 @@ Resources:
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
         VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
-      TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/load-balancers.yml"
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Ref: InfrastructureGitCommit, "/stacks/load-balancers.yml"]]
       TimeoutInMinutes: "5"
   ##############################################################################
   #### CASTLE ##################################################################
@@ -165,7 +165,7 @@ Resources:
         SecretsRegion: !Ref ECRRegion
         CastleECRImageTag: !Ref CastleECRImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
-      TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/castle.prx.org.yml"
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Ref: InfrastructureGitCommit, "/stacks/castle.prx.org.yml"]]
       TimeoutInMinutes: "5"
   ##############################################################################
   #### AUDIOGRAMS ##############################################################
@@ -199,7 +199,7 @@ Resources:
         SecretsRegion: !Ref ECRRegion
         AudiogramECRImageTag: !Ref AudiogramECRImageTag
         AudiogramSecretsVersion: !Ref AudiogramSecretsVersion
-      TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/audiogram.yml"
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Ref: InfrastructureGitCommit, "/stacks/audiogram.yml"]]
       TimeoutInMinutes: "5"
   ##############################################################################
   # upload.prx.org #############################################################
