Work on parameter overrides

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -592,7 +592,7 @@ Resources:
                     "InfrastructureStorageStackName": "${InfrastructureStorageStackName}",
                     "NotificationsStackName": "${NotificationsStackName}",
                     "InfrastructureGitCommit": "latest",
-                    "Foo": "Bar"
+                    "Foo": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]}
                   }
                 TemplateConfiguration: TemplateConfigStagingZipArtifact::staging.json
                 TemplatePath: InfrastructureRepoSourceArtifact::stacks/root.yml
